# QtLogicSimulator

./: .gitignore  CMakeLists.txt  PinContainer.h  README.md  gate.h  main.cpp  mainWindow.cpp  mainWindow.h  pin.cpp  pin.h  wire.cpp  wire.h
